<resources>
    <string name="app_name">Tracking</string>

    <!--  Auth fragment strings  -->
    <string name="hint_username_or_email">Username or Email</string>
    <string name="hint_password">Password</string>
    <string name="action_login">Login</string>
    <string name="msg_logging_in_as_admin">Logging in as an admin</string>
    <string name="error_missing_fields">Some fields are missing.</string>
    <string name="url_splash_video_format">https://raw.githubusercontent.com/fourcodeco/tracking-android/master/extras/splash_%d.mp4</string>
    <string name="url_splash_video_default">https://raw.githubusercontent.com/fourcodeco/tracking-android/master/extras/splash_1.mp4</string>

    <!--  Shared preferences strings  -->
    <string name="shared_pref_credentials">tracking_credentials</string>
    <string name="shared_pref_token">tracking_token</string>
    <string name="shared_pref_admin_id">tracking_admin_id</string>
    <string name="shared_pref_id">tracking_user_id</string>

    <!--  Home (standard) fragment strings  -->
    <string name="action_search">Search</string>
    <string name="action_add_destination">Add destination</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_show_favorites">Show Favorites</string>
    <string name="msg_loading">Loading</string>
    <string name="error_already_added">%s is already on the list.</string>
    <string name="title_total_distance">Total Distance</string>
    <string name="title_fuel_cost">Fuel Cost</string>
    <string name="title_travel_time">Travel Time</string>
    <string name="format_distance_kilometers">%.2f km</string>
    <string name="format_distance_meters">%.2f m</string>
    <string name="format_fuel_cost">%.2f %s</string>
    <string name="placeholder_distance">0.00 km</string>
    <string name="placeholder_fuel_cost">0.00 PHP</string>
    <string name="placeholder_travel_time">0h 0m 0s</string>

    <!--  Bottom sheet strings  -->
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>

    <!--  Preference screen (standard) strings  -->
    <string name="title_fuel_efficiency">Efficiency (km/L)</string>
    <string name="title_fuel_price">Price of fuel per liter</string>
    <string name="title_currency">Currency</string>
    <string name="title_navigation">Navigation</string>
    <string name="title_simulate">Simulate</string>

    <!--  Nav fragment strings  -->
    <string name="format_location_centrifuge">
        {\"latitude\": %f, \"longitude\": %f, \"speed\": %f}
    </string>
    <string name="format_notification_centrifuge">
        {\"notification\": \"%s\"}
    </string>
    <string name="msg_notification_off_route">
        User is off-route. Re-routing.
    </string>

</resources>
