<?xml version="1.0" encoding="utf-8"?>

<egolabsapps.basicodemine.videolayout.VideoLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/videoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:video_gravity="centerCrop"
    app:path_or_url="@string/url_splash_video"
    tools:ignore="Autofill,ContentDescription"
    tools:background="@drawable/splash">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingTop="56dp"
            android:paddingRight="24dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/banner"
                android:layout_width="wrap_content"
                android:layout_height="256dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/banner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/username_or_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_edit_text_background"
                android:hint="@string/hint_username_or_email"
                android:textColorHint="@color/colorPrimaryAccent"
                android:inputType="textEmailAddress"
                android:padding="@dimen/text_input_layout_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/banner" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_edit_text_background"
                android:hint="@string/hint_password"
                android:textColorHint="@color/colorPrimaryAccent"
                android:inputType="textPassword"
                android:padding="@dimen/text_input_layout_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_or_email_input" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/action_login"
                android:textColor="@color/colorPrimaryText"
                android:background="@drawable/shape_button_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</egolabsapps.basicodemine.videolayout.VideoLayout>